Added image to Hello World

--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,8 @@
   <li>Love</li>
   <li>Health</li>
 </ul>
+
+<img src="https://raw.githubusercontent.com/austinsang007/freeimage/main/SplitShire-VS-Developer-0137.jpg" id="imager" class="imagerNew" alt="laptop screen with some code" style="width:15em;height:15em">
 </body>
 
 
