Just changed the list style type like the client wanted

--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 <body>
 <h1>This is a Heading</h1>
 <p>This is my first paragraph.</p>
-<ul>
+<ul style="list-style-type="square">
   <li>Love</li>
   <li>Health</li>
 </ul>
