--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,10 @@
   <li>Love</li>
   <li>Health</li>
 </ul>
+
+<img src="https://raw.githubusercontent.com/austinsang007/freeimage/main/SplitShire-VS-Developer-0137.jpg" id="imager" class="imagerNew" alt="laptop screen with some code" style="width:15em;height:15em">
+<img src="umohA.jpg" alt="my passport photo" style="width:15em;height:15em;display:block">
+<p>This is an extra paragraph about me.</p>
 </body>
 
 
