Just added a video file

--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,11 @@
 <img src="https://raw.githubusercontent.com/austinsang007/freeimage/main/SplitShire-VS-Developer-0137.jpg" id="imager" class="imagerNew" alt="laptop screen with some code" style="width:15em;height:15em">
 <img src="umohA.jpg" alt="my passport photo" style="width:15em;height:15em;display:block">
 <p>This is an extra paragraph about me.</p>
+
+<video controls width="10em" height="10em" muted>
+  <source src="Austin_upwork_vid" type="video/MP4">
+  Your browser does not support the video file type.
+</video>
 </body>
 
 
