Just included a video of me!

--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,8 @@
 <img src="umohA.jpg" alt="my passport photo" style="width:15em;height:15em;display:block">
 <p>This is an extra paragraph about me.</p>
 
-<video controls width="10em" height="10em" muted>
-  <source src="Austin_upwork_vid" type="video/MP4">
+<video controls width="500em" height="500em" autoplay>
+  <source src="austinV.mp4" type="video/MP4">
   Your browser does not support the video file type.
 </video>
 </body>
